# Beidou-Cup

./: CMakeLists.txt  tags
accessories/: PinholeCamera.cpp  PinholeCamera.h  calibration.h  cameras.h  misc.cpp
evaluation/: evaluateEuRoC_MH_03.bash
gse/: gui3.fbp
gse/include/: gui_serial.h  gui_toplevel.h
gse/src/: gui.cpp
includes/: acquisition.h  config.h  defines.h  fifo_cam.h  fifo_fea.h  globals.h  includes.h  protos.h  pvt.h  signaldef.h  threaded_object.h
main/: README.md  main.cpp
main/accessories/: accumulator.h  eigen_utils.h  faim_assert.h  preintegration.h
main/gse/: gui_classes.cpp  gui_classes.h
main/gse/include/: gui.h  threaded_object.h
main/gse/src/: gui_serial.cpp  gui_toplevel.cpp  threaded_object.cpp
main/includes/: .config.h.swp  correlator.h  fifo_imu.h  messages.h  sdr_structs.h  source_cam.h  source_imu.h  structs.h  sv_select.h  telemetry.h
main/main/: .init.cpp.swp  init.cpp  shutdown.cpp
main/objects/: .source_cam.cpp.swp  .source_imu.cpp.swp  acquisition.cpp  fifo_fea.cpp  fifo_imu.cpp  source_cam.cpp  source_imu.cpp  sv_select.cpp  threaded_object.cpp
main/params/: euroc_ds_calib.json
objects/: .correlator.cpp.swp  correlator.cpp  fifo_cam.cpp  pvt.cpp  telemetry.cpp
output/EuRoC_MAV/machine_hall/MH_03/: traj_vio.csv
params/: .euroc_ds_calib.json.swp
params/Euroc/: parameters.yaml
